--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "can": "^2.3.0-pre.1",
+    "dom-patch": "^0.3.1",
     "jquery": "^2.1.4",
     "micro-location": "^0.1.4",
     "setimmediate": "^1.0.2"
