--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "homepage": "https://github.com/canjs/worker-render#readme",
   "devDependencies": {
+    "funcunit": "^3.0.0",
+    "jquery": "^2.1.4",
     "steal": "^0.10.5",
     "steal-qunit": "0.0.4",
     "steal-tools": "^0.10.7",
     "testee": "^0.2.0",
     "todomvc-app-css": "^1.0.1",
-    "todomvc-common": "^1.0.2",
-    "jquery": "^2.1.4"
+    "todomvc-common": "^1.0.2"
   },
   "dependencies": {
     "can": "^2.3.0-pre.1",
@@ -42,6 +43,9 @@
     },
     "configDependencies": [
       "system-config"
+    ],
+    "npmIgnore": [
+      "testee"
     ]
   }
 }
