--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worker-render",
+  "name": "worker-render-docs",
   "version": "1.1.4",
   "description": "Run CanJS apps in a WebWorker",
   "main": "dist/cjs/window/window.js",
@@ -20,31 +20,7 @@
     "url": "https://github.com/canjs/worker-render/issues"
   },
   "homepage": "https://github.com/canjs/worker-render#readme",
-  "devDependencies": {
-    "funcunit": "^3.0.0",
-    "jquery": "^2.1.4",
-    "steal": "^0.10.5",
-    "steal-qunit": "0.0.4",
-    "steal-tools": "^0.10.7",
-    "testee": "^0.2.0",
-    "todomvc-app-css": "^1.0.1",
-    "todomvc-common": "^1.0.2"
-  },
   "dependencies": {
-    "can": "^2.3.0-pre.1",
-    "dom-patch": "^0.3.1",
-    "micro-location": "^0.1.4"
-  },
-  "system": {
-    "main": "window/window",
-    "directories": {
-      "lib": "src"
-    },
-    "configDependencies": [
-      "system-config"
-    ],
-    "npmIgnore": [
-      "testee"
-    ]
+    "documentjs": "^0.3.0-pre.5"
   }
 }
