--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "devDependencies": {
     "funcunit": "^3.0.0",
     "jquery": "^2.1.4",
-    "steal": "^0.11.0-pre.8",
+    "steal": "^0.16.0",
     "steal-qunit": "0.0.4",
-    "steal-tools": "^0.11.0-pre.11",
+    "steal-tools": "^0.16.0",
     "testee": "^0.2.0",
     "todomvc-app-css": "^1.0.1",
     "todomvc-common": "^1.0.2"
   },
   "dependencies": {
-    "can": "^2.3.0-pre.1",
+    "can": "^2.3.0",
     "dom-patch": "^1.0.0",
     "micro-location": "^0.1.4",
     "node-route": "^1.0.1"
