--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "worker-render",
-  "version": "1.2.2",
+  "version": "1.3.0-pre.0",
   "description": "Run CanJS apps in a WebWorker",
   "main": "dist/cjs/window/window.js",
   "scripts": {
